@@ -6,9 +6,9 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/simple-xml-2.6.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/achartengine-1.0.0.jar"/>
-	<classpathentry kind="lib" path="libs/netxms-base-1.2.2.jar"/>
-	<classpathentry kind="lib" path="libs/netxms-client-1.2.2.jar"/>
-	<classpathentry kind="lib" path="libs/netxms-client-api-1.2.2.jar"/>
 	<classpathentry kind="lib" path="libs/acra-4.2.3.jar"/>
+	<classpathentry kind="lib" path="libs/netxms-base-1.2.3.jar"/>
+	<classpathentry kind="lib" path="libs/netxms-client-1.2.3.jar"/>
+	<classpathentry kind="lib" path="libs/netxms-client-api-1.2.3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
